# financial-dashboard-mcp

./: .bandit  .claude-code.json  .commitlintrc.json  .env.example  .env.test  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_MCP_SETUP.md  CLAUDE_DESKTOP_SAFE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CONTRIBUTING.md  FINAL_CLAUDE_DESKTOP_SETUP.md  LICENSE  MCP_AUTHENTICATION_FIXED.md  Makefile  README.md  STARTUP_GUIDE.md  SYSTEM_STATUS.md  TESTING.md  TEST_FIXES_SUMMARY.md  TODO.md  VS_CODE_TESTING_FIX.md  VS_CODE_TESTING_IMPLEMENTATION.md  alembic.ini  bandit-report.json  claude_desktop_config_corrected.json  claude_desktop_safe_mcp_config.json  claude_desktop_working_config.json  docker-compose.yml  fix_async_tests.py  linting_fixes_summary.md  mypy.ini  pyproject.toml  pytest.ini.backup  pytest.sh  (+13 more)
.github/workflows/: ci.yml  release.yml  version-check.yml
archive/old_test_files/: claude_desktop_api_helper.py  claude_desktop_config.json  claude_desktop_mcp_config.json  simple_mcp_server.py  start_services.py  test_final_mcp.py  test_fixed_mcp.py  test_mcp_server.py  test_module_mcp.py
backend/: __init__.py  config.py  constants.py  database.py  exceptions.py  main.py
backend/api/: __init__.py  assets.py  auth.py  cash_accounts.py  isin.py  isin_sync.py  portfolio.py  positions.py  tasks.py  transactions.py  user_settings.py
backend/auth/: README.md  __init__.py  dependencies.py  jwt.py  password.py
backend/core/: exceptions.py  security.py
backend/middleware/: error_handler.py
backend/models/: __init__.py  asset.py  base.py  cash_account.py  isin.py  portfolio_snapshot.py  position.py  price_history.py  transaction.py  user.py  user_settings.py
backend/schemas/: __init__.py  asset.py  auth.py  base.py  cash_account.py  isin.py  portfolio.py  position.py  transaction.py  user_settings.py
backend/services/: __init__.py  base.py  base_provider.py  cash_account.py  enhanced_european_providers.py  enhanced_market_data.py  european_mappings.py  exceptions.py  german_data_providers.py  isin_prototype.py  isin_sync_service.py  isin_utils.py  market_data.py  performance_benchmark.py  portfolio.py  position.py  ticker_search.py  ticker_utils.py  transaction.py  user_settings.py
backend/tasks/: __init__.py  cli.py  isin_tasks.py  manager.py  market_data.py  mock_market_data.py  portfolio.py  schedule.py  worker.py
database/migrations/: env.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  docker-compose.prod.yml
docs/: AUTHENTICATION.md  AUTOMATED_TESTING_SETUP.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CONFIG_FIX.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_USAGE.md  CONTRIBUTING.md  FLOWER_CREDENTIALS.md  FRONTEND_FIX_SUMMARY.md  FRONTEND_GUIDE.md  MCP_SERVER_FIX_SUMMARY.md  MCP_SETUP.md  MCP_TROUBLESHOOTING.md  POSITION_MANAGEMENT.md  PRD.md  PRODUCTION_DEPLOYMENT.md  README.md  RECOMMENDATIONS.md  SECURITY.md  SEMANTIC_VERSIONING.md  SERVICE_SETUP_COMPLETE.md  SETUP_SUCCESS_SUMMARY.md  TASK_QUEUE.md  TASK_QUEUE_TEST_RESULTS.md  TESTING.md  TODO.md  VS_CODE_TESTING_SOLUTION.md  VS_CODE_TESTING_SUMMARY.md  VS_CODE_TESTING_TROUBLESHOOTING.md  architectural_comparison_financial_dashboard.md  claude_desktop_config.json  isin_support_plan.md
docs/deployment/: SERVICE_MANAGEMENT.md
docs/fixes/: AUTHENTICATION_FIXED.md  CASH_ISSUE_RESOLVED.md  MCP_FULLY_FIXED.md  PORTFOLIO_ISSUES_RESOLVED.md
docs/guides/: QUICK_START.md
docs/mcp/: MCP_SERVER.md  MCP_SETUP.md
docs/setup/: CLAUDE_DESKTOP_SETUP.md
docs/status/: PRODUCTION_TEST_REPORT.md  SYSTEM_STATUS.md  technical_debt_audit.md
docs/technical/: EUROPEAN_TICKERS.md
docs/testing/: TEST_FIXES_SUMMARY.md  VS_CODE_TESTING_GUIDE.md
frontend/: app.py  app_new.py  app_no_auth.py  app_old.py  config.py
frontend/components/: __init__.py  auth.py  backup_export.py  enhanced_charts.py  enhanced_portfolio.py  isin_analytics_charts.py  isin_analytics_dashboard.py  isin_analytics_data.py  isin_analytics_quality.py  isin_analytics_widgets.py  isin_input.py  isin_sync_monitor.py  portfolio.py  portfolio_charts.py  portfolio_data.py  portfolio_tables.py  portfolio_utils.py  portfolio_widgets.py  tasks.py
frontend/services/: __init__.py  settings.py
mcp_server/: __init__.py  __main__.py  auth.py  financial_dashboard_mcp.py  financial_dashboard_server.py  main.py  run.py  server.py
mcp_server/tools/: __init__.py  analytics.py  market_data.py  portfolio.py
scripts/: add_click_digital.py  add_to_claude_config.py  analyze_isin_support.py  check_user.py  check_version_consistency.py  create_default_user.py  create_demo_user.py  debug_click_ticker.py  demo_setup.py  final_system_test.py  final_test.py  find_ticker.py  fix_tests.py  integration_test.py  manage_services.py  manual_test_add_demo_positions.py  manual_test_auth.py  manual_test_celery_beat.py  manual_test_european_tickers.py  manual_test_frontend_components.py  manual_test_full_stack.py  manual_test_isin_integration.py  manual_test_mcp_server.py  manual_test_mcp_standalone.py  manual_test_position_management.py  manual_test_price_updates.py  manual_test_price_updates_simple.py  manual_test_production_features.py  manual_test_quality_check.py  manual_test_task_queue.py  manual_test_with_real_data.py  monitor_claude_logs.sh  monitor_price_updates.py  safe_claude_update.sh  services.sh  setup_production.sh  setup_production_data.py  setup_production_secrets.sh  start_dashboard.sh  start_mcp_server.py  (+27 more)
tests/: __init__.py  conftest.py  factories.py  test_api_integration.py  test_backend.py  test_basic.py  test_cash_account_service.py  test_celery_integration.py  test_db_integration.py  test_e2e_system.py  test_enhanced_european_providers.py  test_financial_calculations.py  test_mcp_backend_integration.py  test_mcp_server.py  test_mcp_server_integration.py  test_performance_benchmark.py  test_portfolio_service.py  test_position_service.py  test_vscode_fix_verification.py  test_vscode_integration.py  test_vscode_validation.py
tests/api/: test_auth.py  test_isin_api.py
tests/auth/: test_jwt.py  (+2 more)
(+14 files in other folders)
